# MyFirstFourStepModel

./: .Rbuildignore  .gitignore  .lintr  404.html  DESCRIPTION  LICENSE  LICENSE-text.html  LICENSE-text.md  LICENSE.html  LICENSE.md  Manifest.toml  NAMESPACE  Project.toml  README.md  README.qmd  _pkgdown.yml  _quarto.yml  air.toml  authors.html  authors.md  environment.yml  index.html  index.md  index.qmd  llms.txt  pkgdown.yml  search.json  sitemap.xml
R/: MyFirstFourStepModel-package.R  assignment.R  attraction.R  base_marginals.R  bf4sdm-package.R  bf4sm-package.R  constants.R  distribution.R  error_handling.R  extendr-wrappers.R  generation.R  gravity_calibration.R  interface.R  ipf.R  lm_simple.R  load_nhts.R  lu_scenario.R  mapping.R  mnl_simple.R  modechoice.R  model_settings.R  network.R  network_scenario.R  production.R  serialization.R  time_periods.R
articles/: classroom_implementation.html  classroom_implementation.md  estimation.html  estimation.md  homework_assignment.html  homework_assignment.md  index.html  index.md  methods.html  methods.md  prior_work.html  prior_work.md  scenarios.html  scenarios.md  taste_of_momo.html
docs/: index.html  search.json
examples/: chatham_park_model.R
man/: MyFirstFourStepModel-package.Rd  abort_on_error.Rd  add_households.Rd  aggregate_lodes_to_tracts.Rd  all_or_nothing.Rd  apply_direction_factors.Rd  balance_production_attraction.Rd  bf4sm-package.Rd  build_network.Rd  calculate_direction_factors.Rd  calculate_occupancy_factors.Rd  ipf.Rd  (+48 more)
src/rust/: Cargo.toml
src/rust/src/: ipf.rs  lib.rs  serialization.rs
(+193 files in other folders)
