[package]
name = 'myfirstfourstepmodel'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.65'

[lib]
crate-type = [ 'staticlib' ]
name = 'myfirstfourstepmodel'

[dependencies]
extendr-api = {version = '0.8.1', features = ["result_list"]}
ureq = "3.1.4"
zip = "7.2.0"

[profile.release]
lto = true
codegen-units = 1
